@@ -29,9 +29,9 @@
  * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.SegmentAllocator;
-import static jdk.incubator.foreign.MemoryAddress.NULL;
+import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentAllocator;
+import static java.lang.foreign.MemoryAddress.NULL;
 import static org.jextract.curl_h.*;
 import org.jextract.*;
 
@@ -41,8 +41,8 @@ public class CurlMain {
        curl_global_init(CURL_GLOBAL_DEFAULT());
        var curl = curl_easy_init();
        if(!curl.equals(NULL)) {
-           try (var scope = ResourceScope.newConfinedScope()) {
-               var allocator = SegmentAllocator.nativeAllocator(scope);
+           try (var scope = MemorySession.openConfined()) {
+               var allocator = scope;
                var url = allocator.allocateUtf8String(urlStr);
                curl_easy_setopt(curl, CURLOPT_URL(), url.address());
                int res = curl_easy_perform(curl);
