@@ -30,13 +30,13 @@
  */
 
 import static org.unix.time_h.*;
-import static jdk.incubator.foreign.CLinker.*;
-import jdk.incubator.foreign.*;
+import static java.lang.foreign.Linker.*;
+import java.lang.foreign.*;
 import org.unix.*;
 
 public class PanamaTime {
     public static void main(String[] args) {
-        try (var scope = ResourceScope.newConfinedScope()) {
+        try (var scope = MemorySession.openConfined()) {
             var allocator = SegmentAllocator.newNativeArena(scope);
             var now = allocator.allocate(C_LONG, System.currentTimeMillis() / 1000);
             MemorySegment time = tm.allocate(scope);
