@@ -26,9 +26,9 @@
 
 package org.openjdk.jextract;
 
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.ValueLayout;
 import org.openjdk.jextract.impl.TypeImpl;
 import org.openjdk.jextract.impl.UnsupportedLayouts;
 
