@@ -30,8 +30,8 @@ package org.openjdk.jextract.clang.libclang;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class CXString {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -47,13 +47,13 @@ public class CXString {
         return CXString.data$VH;
     }
     public static MemoryAddress data$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)CXString.data$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)CXString.data$VH.get(seg);
     }
     public static void data$set( MemorySegment seg, MemoryAddress x) {
         CXString.data$VH.set(seg, x);
     }
     public static MemoryAddress data$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)CXString.data$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)CXString.data$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void data$set(MemorySegment seg, long index, MemoryAddress x) {
         CXString.data$VH.set(seg.asSlice(index*sizeof()), x);
@@ -79,11 +79,7 @@ public class CXString {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
 }
 
 
