@@ -26,8 +26,8 @@
 
 package org.openjdk.jextract.impl;
 
-import jdk.incubator.foreign.GroupLayout;
-import jdk.incubator.foreign.MemoryLayout;
+import java.lang.foreign.GroupLayout;
+import java.lang.foreign.MemoryLayout;
 import org.openjdk.jextract.Declaration;
 import org.openjdk.jextract.clang.Cursor;
 import org.openjdk.jextract.clang.Type;
