@@ -21,7 +21,7 @@
  * questions.
  */
 
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemorySession;
 import org.testng.annotations.Test;
 import static org.testng.Assert.assertEquals;
 
@@ -48,7 +48,7 @@ import test.jextract.test8252465.*;
 public class LibTest8252465Test {
     @Test
     public void test() {
-        try (var scope = ResourceScope.newConfinedScope()) {
+        try (var scope = MemorySession.openConfined()) {
             var foo = Foo.allocate(scope);
             Foo.x$set(foo, 3.14f);
             assertEquals(Foo.x$get(foo), 3.14f, 0.001f);
