@@ -22,11 +22,11 @@
  */
 
 import java.lang.reflect.Method;
-import jdk.incubator.foreign.GroupLayout;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemoryLayout.PathElement;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.GroupLayout;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemoryLayout.PathElement;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 import org.testng.annotations.Test;
 
 import test.jextract.unsupported.unsupported_h;
@@ -53,7 +53,7 @@ import test.jextract.unsupported.*;
 public class LibUnsupportedTest {
     @Test
     public void testAllocateFoo() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession scope = MemorySession.openConfined()) {
             var seg = Foo.allocate(scope);
             Foo.i$set(seg, 32);
             Foo.c$set(seg, (byte)'z');
@@ -64,7 +64,7 @@ public class LibUnsupportedTest {
 
     @Test
     public void testGetFoo() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession scope = MemorySession.openConfined()) {
             var seg = MemorySegment.ofAddress(getFoo(), Foo.sizeof(), scope);
             Foo.i$set(seg, 42);
             Foo.c$set(seg, (byte)'j');
