@@ -21,8 +21,8 @@
  * questions.
  */
 
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySegment;
 import org.testng.annotations.Test;
 import test.jextract.test8259473.*;
 import static org.testng.Assert.assertEquals;
