@@ -21,11 +21,10 @@
  * questions.
  */
 
-import jdk.incubator.foreign.CLinker;
-import jdk.incubator.foreign.GroupLayout;
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemoryLayout.PathElement;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.GroupLayout;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.MemoryLayout.PathElement;
+import java.lang.foreign.MemorySession;
 import org.testng.annotations.Test;
 
 import static org.testng.Assert.assertEquals;
@@ -50,7 +49,7 @@ import test.jextract.struct.*;
 public class LibStructTest {
     @Test
     public void testMakePoint() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession scope = MemorySession.openConfined()) {
             var seg = makePoint(scope, 42, -39);
             assertEquals(Point.x$get(seg), 42);
             assertEquals(Point.y$get(seg), -39);
@@ -59,7 +58,7 @@ public class LibStructTest {
 
     @Test
     public void testAllocate() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession scope = MemorySession.openConfined()) {
             var seg = Point.allocate(scope);
             Point.x$set(seg, 56);
             Point.y$set(seg, 65);
@@ -70,7 +69,7 @@ public class LibStructTest {
 
     @Test
     public void testAllocateArray() {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
+        try (MemorySession scope = MemorySession.openConfined()) {
             var seg = Point.allocateArray(3, scope);
             for (int i = 0; i < 3; i++) {
                 Point.x$set(seg, i, 56 + i);
