@@ -25,8 +25,8 @@ package org.openjdk.jextract.test.toolprovider;
 
 import java.lang.reflect.Method;
 import java.nio.file.Path;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySegment;
 import testlib.TestUtils;
 import org.testng.annotations.Test;
 import testlib.JextractToolRunner;
