@@ -23,12 +23,11 @@
 
 package org.openjdk.jextract.test.toolprovider;
 
-import jdk.incubator.foreign.Addressable;
-import jdk.incubator.foreign.CLinker;
+import java.lang.foreign.Addressable;
 import testlib.TestUtils;
 import org.testng.annotations.Test;
 import java.nio.file.Path;
-import jdk.incubator.foreign.GroupLayout;
+import java.lang.foreign.GroupLayout;
 import testlib.JextractToolRunner;
 
 import static org.testng.Assert.assertNotNull;
